GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  chown and chgrp with the -v --from= options, now output the correct owner.
  I.E. for skipped files, the original ownership is output, not the new one.
  [bug introduced in sh-utils-2.0g]

  printf '%d' '"' no longer accesses out-of-bounds memory in the diagnostic.
  [bug introduced in sh-utils-1.16]

  split --number l/... no longer creates extraneous files in certain cases.
  [bug introduced in coreutils-8.8]

  timeout now sends signals to commands that create their own process group.
  timeout is no longer confused when starting off with a child process.
  [bugs introduced in coreutils-7.0]

  unexpand -a now aligns correctly when there are spaces spanning a tabstop,
  followed by a tab.  In that case a space was dropped, causing misalignment.
  We also now ensure that a space never precedes a tab.
  [bug introduced in coreutils-5.3.0]

** Changes in behavior

  chmod, chown and chgrp now output the original attributes in messages,
  when -v or -c specified.

** New features

  md5sum accepts the new --strict option.  With --check, it makes the
  tool exit non-zero for any invalid input line, rather than just warning.
  This also affects sha1sum, sha224sum, sha384sum and sha512sum.

  split accepts a new --filter=CMD option.  With it, split filters output
  through CMD.  CMD may use the $FILE environment variable, which is set to
  the nominal output file name for each invocation of CMD.  For example, to
  split a file into 3 approximately equal parts, which are then compressed:
    split -n3 --filter='xz > $FILE.xz' big
  Note the use of single quotes, not double quotes.
  That creates files named xaa.xz, xab.xz and xac.xz.

  timeout accepts a new --foreground option, to support commands not started
  directly from a shell prompt, where the command is interactive or needs to
  receive signals initiated from the terminal.